--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
             <a href="about.html">Rreth nesh</a>
             <a href="contact.html">Kontakti</a>
             <a href="colleges.html">Fakultetet</a>
+            <a href="dashboard.php">Dashboard</a>
         </div>
 
         <!-- Desktop Auth Buttons -->
         <div class="auth-buttons">
-            <a href="user.html"><i class="fa-solid fa-user" id="fa-user"></i></a>
+            <a href="dashboard.php"><i class="fa-solid fa-user" id="fa-user"></i></a>
             <a href="login.html"><button id="loginBtn">Login</button></a>
             <a href="register.html"><button id="register-btn">Register</button></a>
 
@@ -52,9 +53,10 @@
             <a href="about.html">Rreth nesh</a>
             <a href="contact.html">Kontakti</a>
             <a href="colleges.html">Fakultetet</a>
+            <a href="dashboard.php">Dashboard</a>
         </div>
         <div class="mobile-auth-buttons">
-            <a href="user.php"><i class="fa-solid fa-user" id="fa-user"></i></a>
+            <a href="dashboard.php"><i class="fa-solid fa-user" id="fa-user"></i></a>
             <a href="login.html"><button id="loginBtn">Login</button></a>
             <a href="register.html"><button id="register-btn">Register</button></a>
             <!-- Theme Toggle -->
