--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,54 @@
         <img src="LogoStudentiks_pabg.png" alt="Logo" class="logo">
         
         <!-- Desktop Navigation Links -->
-        <div class="nav-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
-        </div>
+        <nav class="nav-container">
+    <img src="LogoStudentiks_pabg.png" alt="Logo" class="logo">
+
+    <div class="nav-links">
+    <a href="index.html">
+        <i class="fa-solid fa-house"></i>
+        Ballina
+    </a>
+
+    <a href="about.html">
+        <i class="fa-solid fa-circle-info"></i>
+        Rreth nesh
+    </a>
+
+    <a href="contact.html">
+        <i class="fa-solid fa-envelope"></i>
+        Kontakti
+    </a>
+
+    <a href="colleges.html">
+        <i class="fa-solid fa-graduation-cap"></i>
+        Fakultetet
+    </a>
+
+    <a href="dashboard.php" class="active">
+        <i class="fa-solid fa-chart-line"></i>
+        Dashboard
+    </a>
+</div>
+
+
+    <div class="auth-buttons">
+        <a href="dashboard.php"><i class="fa-solid fa-user"></i></a>
+        <a href="login.html"><button>Login</button></a>
+        <a href="register.html"><button>Register</button></a>
+
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider"></span>
+        </label>
+    </div>
+
+    <button class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+</nav>
         
         <!-- Desktop Auth Buttons -->
         <div class="auth-buttons">
