--- a/index.html
+++ b/index.html
@@ -1,196 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studenti-Ks - Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+
+    <!-- Fonts & Icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body class="light">
-    <!-- ==================== NAVBAR ==================== -->
-    <nav class="nav-container">
-        <!-- Logo -->
-        <img src="LogoStudentiks_pabg.png" alt="Logo" class="logo">
-        <!-- Desktop Navigation Links -->
-        <div class="nav-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
-        </div>
 
-        <!-- Desktop Auth Buttons -->
-        <div class="auth-buttons">
-            <a href="dashboard.php"><i class="fa-solid fa-user" id="fa-user"></i></a>
-            <a href="login.html"><button id="loginBtn">Login</button></a>
-            <a href="register.html"><button id="register-btn">Register</button></a>
+<!-- ==================== NAVBAR ==================== -->
+<nav class="nav-container">
+    <img src="LogoStudentiks_pabg.png" alt="Logo" class="logo">
 
-            <!-- Theme Toggle -->
-            <label class="switch">
-                <input type="checkbox" id="theme-toggle">
-                <span class="slider"></span>
-            </label>
-        </div>
-<images/>
-           <!-- Hamburger Menu (Mobile Only) -->
-        <button class="hamburger" id="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-    </nav>
+    <div class="nav-links">
+    <a href="index.html">
+        <i class="fa-solid fa-house"></i>
+        Ballina
+    </a>
 
-    <!-- Mobile Menu -->
-    <div class="mobile-menu" id="mobile-menu">
-        <div class="mobile-menu-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
-        </div>
-        <div class="mobile-auth-buttons">
-            <a href="dashboard.php"><i class="fa-solid fa-user" id="fa-user"></i></a>
-            <a href="login.html"><button id="loginBtn">Login</button></a>
-            <a href="register.html"><button id="register-btn">Register</button></a>
-            <!-- Theme Toggle -->
-            <i id="switch" class="fa-solid fa-moon"></i>
-        </div>
+    <a href="about.html">
+        <i class="fa-solid fa-circle-info"></i>
+        Rreth nesh
+    </a>
+
+    <a href="contact.html">
+        <i class="fa-solid fa-envelope"></i>
+        Kontakti
+    </a>
+
+    <a href="colleges.html">
+        <i class="fa-solid fa-graduation-cap"></i>
+        Fakultetet
+    </a>
+
+    <a href="dashboard.php" class="active">
+        <i class="fa-solid fa-chart-line"></i>
+        Dashboard
+    </a>
+</div>
+
+
+    <div class="auth-buttons">
+        <a href="dashboard.php"><i class="fa-solid fa-user"></i></a>
+        <a href="login.html"><button>Login</button></a>
+        <a href="register.html"><button>Register</button></a>
+
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider"></span>
+        </label>
     </div>
-    <!-- MAIN CONTENT -->
-    <main class="hero">
-        <div class="hero-content">
-            <h1>Studenti-Ks</h1>
-            <p>Find your perfect student accommodation and compatible roommates across Kosovo's universities.</p>
-        </div>
 
-        <!-- Card Grid -->
-        <div class="card-grid">
-            <!-- Card 1 -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Student Housing</h3>
-                        <p>Find affordable and comfortable housing near your campus</p>
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="housing.jpg" alt="Student Housing">
-                        <p>Modern apartments and dormitories</p>
-                    </div>
+    <button class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+</nav>
+
+<!-- ==================== MOBILE MENU ==================== -->
+<div class="mobile-menu" id="mobile-menu">
+    <a href="index.html">Ballina</a>
+    <a href="about.html">Rreth nesh</a>
+    <a href="contact.html">Kontakti</a>
+    <a href="colleges.html">Fakultetet</a>
+    <a href="dashboard.php">Dashboard</a>
+</div>
+
+<!-- ==================== MAIN ==================== -->
+<main class="hero">
+
+    <!-- IMAGE SLIDER -->
+    <div class="image-slider">
+        <img id="slider-img" src="" alt="Slider image">
+        <button class="slider-btn prev">&#10094;</button>
+        <button class="slider-btn next">&#10095;</button>
+    </div>
+
+    <div class="hero-content">
+        <h1>Studenti-Ks</h1>
+        <p>Find your perfect student accommodation and compatible roommates across Kosovo's universities.</p>
+    </div>
+
+    <!-- CARD GRID -->
+    <div class="card-grid">
+
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Student Housing</h3>
+                    <p>Find affordable and comfortable housing near your campus</p>
                 </div>
-            </div>
-
-            <!-- Card 2 -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>Roommate Matching</h3>
-                        <p>Connect with compatible roommates based on your preferences</p>
-                    </div>
-                    <div class="flip-card-back">
-                        <img src="roommates.jpg" alt="Roommate Matching">
-                        <p>Smart matching algorithm</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Card 3 -->
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <h3>University Network</h3>
-                        <p>Access housing options across all major universities</p>
-                    </div>
-                    <div class="flip-card-back">
-                        <a href="colleges.html"><img src="Image3.jpg" alt="University Network"></a>
-                        <p>All universities in Kosovo covered</p>
-                    </div>
+                <div class="flip-card-back">
+                    <img src="housing.jpg" alt="">
+                    <p>Modern apartments and dormitories</p>
                 </div>
             </div>
         </div>
-    </main>
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="footer-bottom">
-            <p>&copy; 2024 Studenti-Ks. All rights reserved.</p>
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>Roommate Matching</h3>
+                    <p>Connect with compatible roommates</p>
+                </div>
+                <div class="flip-card-back">
+                    <img src="roommates.jpg" alt="">
+                    <p>Smart matching algorithm</p>
+                </div>
+            </div>
         </div>
-    </footer>
 
-    <script>
-        // Theme Toggle
-        const themeToggle = document.getElementById('theme-toggle');
-        const body = document.body;
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <h3>University Network</h3>
+                    <p>All universities in Kosovo</p>
+                </div>
+                <div class="flip-card-back">
+                    <a href="colleges.html">
+                        <img src="Image3.jpg" alt="">
+                    </a>
+                    <p>All universities covered</p>
+                </div>
+            </div>
+        </div>
 
-        themeToggle.addEventListener('change', function () {
-            if (this.checked) {
-                body.classList.remove('light');
-                body.classList.add('dark');
-                localStorage.setItem('theme', 'dark');
-            } else {
-                body.classList.remove('dark');
-                body.classList.add('light');
-                localStorage.setItem('theme', 'light');
-            }
-        });
+    </div>
+</main>
 
-        // Check saved theme
-        const savedTheme = localStorage.getItem('theme') || 'light';
-        if (savedTheme === 'dark') {
-            body.classList.remove('light');
-            body.classList.add('dark');
-            themeToggle.checked = true;
-        }
+<!-- ==================== FOOTER ==================== -->
+<footer>
+    <p>&copy; 2025 Studenti-Ks. All rights reserved.</p>
+</footer>
 
-        // Mobile Menu Toggle
-        const hamburger = document.getElementById('hamburger');
-        const mobileMenu = document.getElementById('mobile-menu');
+<!-- ==================== JAVASCRIPT ==================== -->
+<script>
+    /* ===== THEME TOGGLE ===== */
+    const themeToggle = document.getElementById("theme-toggle");
+    const body = document.body;
 
-        hamburger.addEventListener('click', function () {
-            hamburger.classList.toggle('active');
-            mobileMenu.classList.toggle('active');
-        });
+    themeToggle.addEventListener("change", () => {
+        body.classList.toggle("dark");
+        body.classList.toggle("light");
+        localStorage.setItem("theme", body.classList.contains("dark") ? "dark" : "light");
+    });
 
-        // Close mobile menu when clicking links
-        mobileMenu.querySelectorAll('a').forEach(link => {
-            link.addEventListener('click', () => {
-                hamburger.classList.remove('active');
-                mobileMenu.classList.remove('active');
-            });
-        });
-    </script>
-    <script>
-        const switch2 = document.getElementById('switch');
+    const savedTheme = localStorage.getItem("theme");
+    if (savedTheme === "dark") {
+        body.classList.add("dark");
+        themeToggle.checked = true;
+    }
 
-        switch2.addEventListener("click", () => {
-            document.body.classList.toggle("dark");
-        });
+    /* ===== MOBILE MENU ===== */
+    const hamburger = document.getElementById("hamburger");
+    const mobileMenu = document.getElementById("mobile-menu");
 
-    </script>
+    hamburger.addEventListener("click", () => {
+        mobileMenu.classList.toggle("active");
+    });
 
-    <script>
-        const images = [
-            {
-                image:
-                    "https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Black_colour.jpg/250px-Black_colour.jpg",
-            },
-            {
-                image:
-                    "https://img.freepik.com/premium-photo/free-seamless-pattern-abstract-texture-geometric-vector-illustration-design-wallpaper-background_1226483-21619.jpg",
-            },
-            {
-                image:
-                    "https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Black_colour.jpg/250px-Black_colour.jpg",
-            }
-            ,
-        ]
-    </script>
+   /* ===== IMAGE SLIDER ===== */
+const images = [
+    "UBTT.jpg",
+    "University of Mitrovica.jpg",
+    "UUP.jpeg"
+];
+
+let index = 0;
+const sliderImg = document.getElementById("slider-img");
+
+// function to change image with fade
+function changeImage(newIndex) {
+    sliderImg.style.opacity = 0; // fade out
+    setTimeout(() => {
+        index = newIndex;
+        sliderImg.src = images[index];
+        sliderImg.style.opacity = 1; // fade in
+    }, 10);
+}
+
+// initial image
+sliderImg.src = images[index];
+
+document.querySelector(".next").onclick = () => {
+    changeImage((index + 1) % images.length);
+};
+
+document.querySelector(".prev").onclick = () => {
+    changeImage((index - 1 + images.length) % images.length);
+};
+
+setInterval(() => {
+    changeImage((index + 1) % images.length);
+}, 4000);
+
+
+</script>
+
 </body>
-
 </html>
