rregullim i disa gjerave

--- a/register.html
+++ b/register.html
@@ -38,11 +38,6 @@
         <i class="fa-solid fa-graduation-cap"></i>
         Fakultetet
     </a>
-
-    <a href="dashboard.php" class="active">
-        <i class="fa-solid fa-chart-line"></i>
-        Dashboard
-    </a>
 </div>
 
 
@@ -88,11 +83,25 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
+            <a href="index.html">
+        <i class="fa-solid fa-house"></i>
+        Ballina
+    </a>
+
+    <a href="about.html">
+        <i class="fa-solid fa-circle-info"></i>
+        Rreth nesh
+    </a>
+
+    <a href="contact.html">
+        <i class="fa-solid fa-envelope"></i>
+        Kontakti
+    </a>
+
+    <a href="colleges.html">
+        <i class="fa-solid fa-graduation-cap"></i>
+        Fakultetet
+    </a>
         </div>
         <div class="mobile-auth-buttons">
              <a href="user.html"><i class="fa-solid fa-user" id="fa-user"></i></a>
