--- a/login.html
+++ b/login.html
@@ -16,11 +16,25 @@
         
         <!-- Desktop Navigation Links -->
         <div class="nav-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
+           <a href="index.html">
+        <i class="fa-solid fa-house"></i>
+        Ballina
+    </a>
+
+    <a href="about.html">
+        <i class="fa-solid fa-circle-info"></i>
+        Rreth nesh
+    </a>
+
+    <a href="contact.html">
+        <i class="fa-solid fa-envelope"></i>
+        Kontakti
+    </a>
+
+    <a href="colleges.html">
+        <i class="fa-solid fa-graduation-cap"></i>
+        Fakultetet
+    </a>
         </div>
         
         <!-- Desktop Auth Buttons -->
@@ -47,11 +61,25 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-links">
-            <a href="index.html">Ballina</a>
-            <a href="about.html">Rreth nesh</a>
-            <a href="contact.html">Kontakti</a>
-            <a href="colleges.html">Fakultetet</a>
-            <a href="dashboard.php">Dashboard</a>
+            <a href="index.html">
+        <i class="fa-solid fa-house"></i>
+        Ballina
+    </a>
+
+    <a href="about.html">
+        <i class="fa-solid fa-circle-info"></i>
+        Rreth nesh
+    </a>
+
+    <a href="contact.html">
+        <i class="fa-solid fa-envelope"></i>
+        Kontakti
+    </a>
+
+    <a href="colleges.html">
+        <i class="fa-solid fa-graduation-cap"></i>
+        Fakultetet
+    </a>
         </div>
         <div class="mobile-auth-buttons">
              <a href="user.html"><i class="fa-solid fa-user" id="fa-user"></i></a>
