--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="admin.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="admin-container">
@@ -13,11 +16,11 @@
             <span class="brand">Studenti-Ks</span>
         </div>
         <nav class="admin-menu">
-            <a href="#" class="menu-item active">Dashboard</a>
-            <a href="#" class="menu-item">Menaxho Përdoruesit</a>
-            <a href="#" class="menu-item">Kërkesat për Akomodim</a>
-            <a href="#" class="menu-item">Raportet</a>
-            <a href="#" class="menu-item">Cilësimet</a>
+            <a href="" class="menu-item active">Dashboard</a>
+            <a href="" class="menu-item">Menaxho Përdoruesit</a>
+            <a href="" class="menu-item">Kërkesat për Akomodim</a>
+            <a href="" class="menu-item">Raportet</a>
+            <a href="" class="menu-item">Cilësimet</a>
         </nav>
         <div class="admin-logout">
             <a href="logout.php">Dil nga sistemi</a>
